--- a/github/workflows/deploy_staging.yaml
+++ b/github/workflows/deploy_staging.yaml
@@ -13,6 +13,6 @@ jobs:
     uses: actions/checkout@v3
 
     -run: rojo-build -o game.rbxl
-    -run: rbxcloud experience publish --f game.rbxl --p 18331518253 --u 6214587694 --t published --a ${{ secrects.API_KEY }}
+    -run: rbxcloud experience publish --f game.rbxl --p 18331518253 --u 6214587694 --t published --a ${{ secrets.API_KEY }}
 
    
