--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: RBXDeploy
 
 on:
   push:
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     uses: actions/checkout@v3
 
+    -run: npm run build
     -run: rojo-build -o game.rbxl
     -run: rbxcloud experience publish --f game.rbxl --p 18331518253 --u 6214587694 --t published --a ${{ secrets.API_KEY }}
 
