--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -10,7 +10,14 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    uses: actions/checkout@v3
+    steps: 
+      - name: Checkout code
+      uses: actions/checkout@v3
+      - uses: LPGhatguy/aftman
+      name: Install aftman
+      with:  
+        version: "^0.3.0"
+
 
     -run: npm run build
     -run: rojo build -o build.rbxlx
