--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -6,18 +6,24 @@ on:
     - main
 
 jobs:
-
-  deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
-    steps: 
-      - name: Checkout code
-      uses: actions/checkout@v3
-      - uses: LPGhatguy/aftman
-      name: Install aftman
-      with:  
-        version: "^0.3.0"
 
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9.2.0
+          run_install: true
+      - uses: ok-nick/setup-aftman@v0.4.2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Compile
+        run: pnpm build:dev --verbose
+
+      - name: Build project
+        run: rojo build --output build.rbxlx
 
     -run: npm run build
     -run: rojo build -o build.rbxlx
