--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -19,7 +19,12 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-        run: rojo build -o build.rbxlx
-        run: rbxcloud experience publish --f game.rbxl --p 18331518253 --u 6214587694 --t published --a ${{ secrets.API_KEY }}
+      
+      - name: Compile
+        run: pnpm build:dev --verbose
+
+      - name: Build project
+        run: rojo build --output build.rbxlx
+        run: rbxcloud experience publish --f build.rbxl --p 18331518253 --u 6214587694 --t published --a ${{ secrets.API_KEY }}
 
    
