--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -6,25 +6,19 @@ on:
     - main
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9.2.0
-          run_install: true
+    deploy:
+      name: deploy
+      runs-on: ubuntu-latest
+      steps: 
+      - name: Checkout code
+      uses: actions/checkout@v3
+
       - uses: ok-nick/setup-aftman@v0.4.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      
-      - name: Compile
-        run: pnpm build:dev --verbose
-
-      - name: Build project
-        run: rojo build --output build.rbxlx
-        run: rbxcloud experience publish --f build.rbxl --p 18331518253 --u 6214587694 --t published --a ${{ secrets.API_KEY }}
+      -run: rojo build -o game.rbxlx
+      -run: rbxcloud experience publish -f game.rbxlx -p 18331518253 -u 6214587694 -t published -a ${{ secrets.API_KEY }}
 
    
