--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -12,7 +12,11 @@ jobs:
       runs-on: ubuntu-latest
       steps: 
       - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+        - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
 
       - uses: ok-nick/setup-aftman@v0.4.2
         with:
