--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -13,10 +13,12 @@ jobs:
       steps: 
       - name: Checkout code
       uses: actions/checkout@v4
-        - name: Use Node.js
+        - name: Use Node js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+      - run: npm ci
+      - run: npm run build --if-present
 
       - uses: ok-nick/setup-aftman@v0.4.2
         with:
