--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -10,14 +10,17 @@ jobs:
     deploy:
       name: deploy
       runs-on: ubuntu-latest
-      steps: 
-      - name: Checkout code
-      uses: actions/checkout@v4
+
+      strategy:
+      matrix:
+    node-version: ['18.x', '20.x']
+
+      steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
-      - run: npm ci
-      - run: npm run build --if-present
+          node-version: ${{ matrix.node-version }}
 
       - uses: ok-nick/setup-aftman@v0.4.2
         with:
