--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -23,4 +23,13 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       -run: rojo build -o game.rbxlx
-      -run: rbxcloud experience publish -f game.rbxlx -p 18331518253 -u 6214587694 -t published -a ${{ secrets.API_KEY }}
+
+      - name: Publish
+        shell: bash
+        env:
+          UID: 6214587694              # Universe ID
+          PID: 18331518253              # Place ID
+          API_KEY: ${{ secrets.API_KEY }} # API Key (keep this in your GitHub Repository Secrets)
+          FILE: game.rbxlx         # Roblox place file (e.g. might have a step before this to build the file with Rojo)
+
+        run: rbxcloud experience publish -a "$API_KEY" -u "$UID" -p "$PID" -t published -f "$FILE"
