--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -1,28 +1,19 @@
-name: RBXDeploy
-
+name: Deploy
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
-    deploy:
-      name: deploy
-      runs-on: ubuntu-latest
-      strategy:
-        matrix:
-          node-version: ['18.x', '20.x']
-      steps:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
 
       - name: Install Aftman
         uses: ok-nick/setup-aftman@v0
-        
-      -run: rojo build -o game.rbxlx  
+
+        run: rojo build -o game.rbxlx
 
       - name: Publish
         shell: bash
