--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Aftman
-        uses: ok-nick/setup-aftman
+        uses: ok-nick/setup-aftman@v0.4.2
 
       - name: Create rbxl file
         run: rojo build -o game.rbxlx
