--- a/.github/workflows/deploy_staging.yaml
+++ b/.github/workflows/deploy_staging.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: ok-nick/setup-aftman@v0.4.2
 
       - name: Build the game
-        uses: npm run build
+        run: npm run build
 
       - name: Create rbxl file
         run: rojo build -o game.rbxlx
